Documentation and clean up
Updated Readme.md to describe project.
UI code for location buttons updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="paris">Paris</string>
     <string name="tokyo">Tokyo</string>
     <string name="mirror">Mirror</string>
+    <string name="skane">Skane</string>
 </resources>
